Terminar el 2do Ejemplo

--- a/1.Curso/FilmCatalgue/app/src/main/res/layout/activity_main.xml
+++ b/1.Curso/FilmCatalgue/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,67 @@
         android:id="@+id/movie_image"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:src="@drawable/gravity"
+        android:layout_gravity="center_horizontal"/>
 
-        android:layout_gravity="center_horizontal">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:textSize="18sp"
+        android:text="@string/instructions"/>
 
-    </ImageView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/gravity_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/gravity"/>
+        <Button
+            android:id="@+id/jumanji_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/jumnaji"/>
+        <Button
+            android:id="@+id/the_lion_king_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/the_lion_king"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/star_wars_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/star_wars"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/inception_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/inception"/>
+        <Button
+            android:id="@+id/toy_story_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/toy_story"/>
+    </LinearLayout>
 </LinearLayout>
