--- a/1.Curso/EMonitor/app/src/main/res/layout/activity_detail.xml
+++ b/1.Curso/EMonitor/app/src/main/res/layout/activity_detail.xml
@@ -5,10 +5,10 @@
     android:id="@+id/activity_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="16dp"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="64dp"
-    android:paddingTop="16dp"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context=".DetailActivity">
 
@@ -17,25 +17,26 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/detail_view_magnitude_layout_vertical_padding"
         android:paddingBottom="@dimen/detail_view_magnitude_layout_bottom_padding"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:paddingLeft="@dimen/detail_view_layout_horizontal_padding"
+        android:paddingRight="@dimen/detail_view_layout_horizontal_padding"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/eq_detail_magnitude"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="72sp"
+            android:textSize="@dimen/detail_view_magnitude_text_size"
             android:layout_gravity="bottom"
-            android:textColor="@color/design_default_color_primary_dark"
-            tools:text="4.6"/>
+            android:textColor="@color/colorPrimaryDark"
+            tools:text="6.6"/>
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
+            android:textSize="@dimen/detail_view_richter_text_size"
             android:layout_gravity="bottom"
+            android:textColor="@color/colorText"
             android:text="@string/richter" />
 
     </LinearLayout>
@@ -43,9 +44,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:layout_marginTop="@dimen/detail_view_layout_vertical_margin"
+        android:paddingLeft="@dimen/detail_view_layout_horizontal_padding"
+        android:paddingRight="@dimen/detail_view_layout_horizontal_padding"
         android:orientation="horizontal">
 
         <ImageView
@@ -107,7 +108,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/detail_activity_view_height"
                 android:layout_marginTop="@dimen/detail_activity_view_margin_top"
-                android:background="@color/black"/>
+                android:background="@color/silver"/>
 
         </LinearLayout>
     </LinearLayout>
@@ -115,9 +116,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:layout_marginTop="@dimen/detail_view_layout_vertical_margin"
+        android:paddingLeft="@dimen/detail_view_layout_horizontal_padding"
+        android:paddingRight="@dimen/detail_view_layout_horizontal_padding"
         android:orientation="horizontal">
 
         <ImageView
@@ -145,7 +146,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/detail_activity_view_height"
                 android:layout_marginTop="@dimen/detail_activity_view_margin_top"
-                android:background="@color/black"/>
+                android:background="@color/silver"/>
 
         </LinearLayout>
     </LinearLayout>
@@ -153,9 +154,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:layout_marginTop="@dimen/detail_view_layout_vertical_margin"
+        android:paddingLeft="@dimen/detail_view_layout_horizontal_padding"
+        android:paddingRight="@dimen/detail_view_layout_horizontal_padding"
         android:orientation="horizontal">
 
         <ImageView
@@ -183,7 +184,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/detail_activity_view_height"
                 android:layout_marginTop="@dimen/detail_activity_view_margin_top"
-                android:background="@color/black"/>
+                android:background="@color/silver"/>
 
         </LinearLayout>
     </LinearLayout>
