--- a/NavigationDrawer/app/src/main/res/layout/activity_main.xml
+++ b/NavigationDrawer/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,19 @@
     tools:context=".MainActivity"
     tools:openDrawer="start">
 
+    <include
+        layout="@layout/app_bar_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
