--- a/Firebase/FirebaseTutorial/app/src/main/res/layout/activity_auth.xml
+++ b/Firebase/FirebaseTutorial/app/src/main/res/layout/activity_auth.xml
@@ -7,6 +7,7 @@
     tools:context=".AuthActivity">
 
     <LinearLayout
+        android:id="@+id/authLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -68,5 +69,21 @@
                 android:textColor="@android:color/white"
                 android:text="Acceder" />
         </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="8dp" />
+
+        <Button
+            android:id="@+id/googleButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:drawableStart="@mipmap/google"
+            android:paddingStart="16dp"
+            android:text="Google"
+            android:textAlignment="textStart"
+            android:textColor="@android:color/white" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
