Poner un splash al app

--- a/Firebase/FirebaseTutorial/app/src/main/res/layout/activity_auth.xml
+++ b/Firebase/FirebaseTutorial/app/src/main/res/layout/activity_auth.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AuthActivity">
+    tools:context=".AuthActivity"
+    android:theme="@style/SplashTheme">
 
     <LinearLayout
         android:id="@+id/authLayout"
